--- a/DeepLearningStudy/ex_lab-11-4-mnist_cnn_layers.ipynb
+++ b/DeepLearningStudy/ex_lab-11-4-mnist_cnn_layers.ipynb
@@ -209,21 +209,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost = 0.803862428\n",
-      "Epoch: 0002 cost = 0.287159930\n",
-      "Epoch: 0003 cost = 0.232931642\n",
-      "Epoch: 0004 cost = 0.201430153\n",
-      "Epoch: 0005 cost = 0.179350786\n",
-      "Epoch: 0006 cost = 0.168154674\n",
-      "Epoch: 0007 cost = 0.160904962\n",
-      "Epoch: 0008 cost = 0.155521880\n",
-      "Epoch: 0009 cost = 0.147420467\n",
-      "Epoch: 0010 cost = 0.150547631\n",
-      "Epoch: 0011 cost = 0.145356910\n",
-      "Epoch: 0012 cost = 0.145940353\n",
-      "Epoch: 0013 cost = 0.139367753\n",
-      "Epoch: 0014 cost = 0.134215814\n",
-      "Epoch: 0015 cost = 0.135513339\n",
+      "Epoch: 0001 cost = 0.807830760\n",
+      "Epoch: 0002 cost = 0.289452694\n",
+      "Epoch: 0003 cost = 0.223462271\n",
+      "Epoch: 0004 cost = 0.194386722\n",
+      "Epoch: 0005 cost = 0.177643204\n",
+      "Epoch: 0006 cost = 0.171638768\n",
+      "Epoch: 0007 cost = 0.160043782\n",
+      "Epoch: 0008 cost = 0.155880590\n",
+      "Epoch: 0009 cost = 0.148062895\n",
+      "Epoch: 0010 cost = 0.144914895\n",
+      "Epoch: 0011 cost = 0.140091372\n",
+      "Epoch: 0012 cost = 0.137003460\n",
+      "Epoch: 0013 cost = 0.136626785\n",
+      "Epoch: 0014 cost = 0.136067951\n",
+      "Epoch: 0015 cost = 0.131864852\n",
       "Learning Finished!\n"
      ]
     }
@@ -260,20 +260,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.991\n",
-      "Label:  [6]\n",
-      "Prediction:  Tensor(\"ArgMax_3:0\", shape=(1,), dtype=int64)\n"
+      "Accuracy: 0.9911\n"
      ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADe5JREFUeJzt3W+MFfW9x/HPF8lNAEM1zYVNpKXXXC/XGIH0Ckps4mnw\ntuamCaQxXv88EGyMD4oS+6TUJ3u28UHbBwavSUmgUJF0Q7mNvUhMrlLN5AZr68aWioLS2AvFVhZb\nkbBoIsq3D3bcnl33/Obszvkz7Pf9SjbOznfOma+jn52ZM2fmZ+4uALHM6nUDALqP4AMBEXwgIIIP\nBETwgYAIPhBQqeCb2S1m9rqZHTWzb7erKQCdZdO9jm9msyQdlbRa0p8lDUm63d1fn7AcXxQAesTd\nbbL5Zfb4KyX93t2Pu/t5SbslrWmy8rGf/v7+cb9X7Yf+Zm5/Ve6tE/2llAn+FZJONPz+Vj4PQMXx\n4R4Q0OwSr/2TpM83/L4on/cp9Xp9bPqyyy4rscrOq9VqvW4hif6mr8q9SeX7y7JMWZa1tGyZD/cu\nkfSGRj/ce1vSS5LucPcjE5bz6a4DwPSZmbzJh3vT3uO7+8dmtkHSsxo9Zdg+MfQAqmnae/yWV8Ae\nH+iJ1B6fD/eAgAg+EBDBBwIi+EBABB8IiOADARF8IKAyX9lFFxw6dChZX7ZsWbL+wgsvJOurVq2a\nck+4+LHHBwIi+EBABB8IiOADARF8ICCCDwRE8IGAuI5fce+9916ybjbp7dZjtmzZkqxzHT8m9vhA\nQAQfCIjgAwERfCAggg8ERPCBgAg+EBDX8Xvs/PnzyfrWrVtLvf+KFStKvR4zE3t8ICCCDwRE8IGA\nCD4QEMEHAiL4QEAEHwio1HV8Mzsm6YykC5LOu/vKdjQVyYcffpisDw4OdqkTRFL2CzwXJNXc/XQ7\nmgHQHWUP9a0N7wGgy8qG1iXtN7MhM7u3HQ0B6Lyyh/o3uvvbZvaPGv0DcMTdD0xcqF6vj03XajXV\narWSqwUwUZZlyrKspWXN3duyUjPrl3TW3R+ZMN/btY6Z6Ny5c8n6/PnzS73/5s2bk/X777+/1Puj\nusxM7j7p01infahvZnPN7NJ8ep6kr0h6dbrvB6B7yhzqL5T0czPz/H1+4u7PtqctAJ007eC7+/9L\nWt7GXkI6c+ZMr1tAQFyKAwIi+EBABB8IiOADARF8ICCCDwRE8IGAeK5+h7377rvJOvctoBfY4wMB\nEXwgIIIPBETwgYAIPhAQwQcCIvhAQFzH77ADBz71CMJx3nzzzVLvP2fOnGR99mz+E+PT2OMDARF8\nICCCDwRE8IGACD4QEMEHAiL4QEBtG0Kr6Qpm+BBap06dStavueaaZL3ofv0lS5Yk60NDQ8n6vHnz\nknXMXB0ZQgvAxYvgAwERfCAggg8ERPCBgAg+EBDBBwIqvFnbzLZL+pqkYXdfms+7XNJPJS2WdEzS\nbe4ecqD3l19+OVkvuk5fZPHixck61+kxHa3s8X8s6asT5m2S9At3XyLpeUnfaXdjADqnMPjufkDS\n6Qmz10jamU/vlLS2zX0B6KDpnuMvcPdhSXL3k5IWtK8lAJ3WrgeyJb+MX6/Xx6ZrtRrjxQEdkGWZ\nsixradnpBn/YzBa6+7CZ9UlK3qnSGHwAnTFxpzowMNB02VYP9S3/+cRTktbl03dL2juVBgH0VmHw\nzWxQ0i8l/YuZ/dHM1kv6nqR/N7M3JK3OfwdwkSg81Hf3O5uUbm5zLxelPXv2lHr93Llzk/XNmzeX\nen9gMnxzDwiI4AMBEXwgIIIPBETwgYAIPhAQwQcCYvD0Ah9//HGyfu7cuWS9aEyB+fPnJ+tFz9VH\nOWfPnk3Wt2zZkqwXPY/h2muvTdZXrVqVrK9evTpZny72+EBABB8IiOADARF8ICCCDwRE8IGACD4Q\nkHV67Hoz806vo5OOHj2arF999dWl3r/o+YPPPfdcqfeP7vDhw8n6TTfdlKyXHRehrKLvkaSYmdzd\nJquxxwcCIvhAQAQfCIjgAwERfCAggg8ERPCBgLgfv0DZ5+YXueuuuzr6/tEV3U/f6+v0Gzdu7Ml6\n2eMDARF8ICCCDwRE8IGACD4QEMEHAiL4QECF1/HNbLukr0kadvel+bx+SfdKOpUv9pC7/2/Huuyh\nDz74oNTr58yZk6xzHT+taPuvX78+WX/yySeT9blz5ybr77//frJ+ySWXJOs333xzsv7www8n653S\nyh7/x5K+Osn8R9z9i/nPjAw9MFMVBt/dD0g6PUlp0id7AKi+Muf4G8zsoJn9yMw+07aOAHTcdL+r\n/0NJ33V3N7OHJT0i6RvNFq7X62PTtVqt8DlzAKYuyzJlWdbSstMKvru/0/DrNkn7Uss3Bh9AZ0zc\nqQ4MDDRdttVDfVPDOb2Z9TXUvi7p1Sl1CKCnWrmcNyipJumzZvZHSf2SvmxmyyVdkHRM0n0d7BFA\nm/Fc/QKzZqUPiszSFzfWrVuXrG/btq3U+i92u3btStYffPDBZP306ckuOLVu6dKlyforr7ySrK9c\nuTJZf/HFF6fcU7vwXH0A4xB8ICCCDwRE8IGACD4QEMEHAiL4QEA8V7/AY489lqw/8MADyfrjjz+e\nrBfdbz44OJisV92JEyeS9R07diTrZa/TFym6Tl90v/2tt97azna6hj0+EBDBBwIi+EBABB8IiOAD\nARF8ICCCDwTE/fgFiq6zX3/99cn6a6+9lqwX3c9f9P733HNPsn7DDTck61dddVWyXvQ8gAsXLiTr\na9euTdafeeaZZL2soufuF41rULT9i57L30vcjw9gHIIPBETwgYAIPhAQwQcCIvhAQAQfCIjr+CXt\n378/Wb/vvvRYI8ePH29nO223YsWKZH1oaChZL7rOX3bcgOuuuy5Z37p1a7K+bNmyUuuvMq7jAxiH\n4AMBEXwgIIIPBETwgYAIPhAQwQcCKryOb2aLJD0haaGkC5K2uft/mdnlkn4qabGkY5Juc/czk7x+\nRl/HL3L27Nlkfffu3cn6008/nazv27dvyj11U9F/+76+vmR906ZNyfqGDRuS9bLfE7iYlb2O/5Gk\nb7n7NZJWSfqmmf2rpE2SfuHuSyQ9L+k77WoYQGcVBt/dT7r7wXx6RNIRSYskrZG0M19sp6T0o1YA\nVMaUjoPM7AuSlkv6laSF7j4sjf5xkLSg3c0B6IyWx84zs0sl/UzSRncfMbOJJ29NT+bq9frYdK1W\nU61Wm1qXAAplWaYsy1patqXgm9lsjYZ+l7vvzWcPm9lCdx82sz5Jp5q9vjH4ADpj4k51YGCg6bKt\nHurvkHTY3R9tmPeUpHX59N2S9k58EYBqKtzjm9mNku6SdMjMfqvRQ/qHJH1f0h4zu0fScUm3dbJR\nAO3D/fgV99FHHyXrIyMjXepkcoODg8l60fj2d9xxR7J+5ZVXTrknjOJ+fADjEHwgIIIPBETwgYAI\nPhAQwQcCIvhAQFzHB2YoruMDGIfgAwERfCAggg8ERPCBgAg+EBDBBwIi+EBABB8IiOADARF8ICCC\nDwRE8IGACD4QEMEHAiL4QEAEHwiI4AMBEXwgIIIPBETwgYAIPhBQYfDNbJGZPW9mr5nZITO7P5/f\nb2Zvmdlv8p9bOt8ugHYofK6+mfVJ6nP3g2Z2qaSXJa2R9J+Szrr7IwWv57n6QA+knqs/u+jF7n5S\n0sl8esTMjki64pP3bluXALpmSuf4ZvYFScsl/TqftcHMDprZj8zsM23uDUCHtBz8/DD/Z5I2uvuI\npB9KutLdl2v0iCB5yA+gOgoP9SXJzGZrNPS73H2vJLn7Ow2LbJO0r9nr6/X62HStVlOtVptGqwBS\nsixTlmUtLdvSoJlm9oSkv7j7txrm9eXn/zKzByWtcPc7J3ktH+4BPZD6cK+VT/VvlPR/kg5J8vzn\nIUl3avR8/4KkY5Luc/fhSV5P8IEeKBX8Nqyc4AM9wDDZAMYh+EBABB8IiOADARF8ICCCDwRE8IGA\nCD4QEMEHAiL4QEAEHwiI4AMBdT34rd4v3Cv0V06V+6tyb1J3+yP4E9BfOVXur8q9STM8+AB6j+AD\nAXXlQRwdXQGApnr2BB4A1cOhPhAQwQcC6lrwzewWM3vdzI6a2be7td5WmdkxM/udmf3WzF6qQD/b\nzWzYzF5pmHe5mT1rZm+Y2TO9HL2oSX+VGUh1ksFeH8jnV2Ib9now2q6c45vZLElHJa2W9GdJQ5Ju\nd/fXO77yFpnZHyT9m7uf7nUvkmRmX5I0IukJd1+az/u+pL+6+w/yP56Xu/umCvXXrxYGUu2GxGCv\n61WBbVh2MNqyurXHXynp9+5+3N3PS9qt0X/JKjFV6NTH3Q9ImvhHaI2knfn0Tklru9pUgyb9SRUZ\nSNXdT7r7wXx6RNIRSYtUkW3YpL+uDUbbrf/Rr5B0ouH3t/T3f8mqcEn7zWzIzO7tdTNNLPhk0JJ8\nFKMFPe5nMpUbSLVhsNdfSVpYtW3Yi8FoK7OHq4Ab3f2Lkv5D0jfzQ9mqq9q12MoNpDrJYK8Tt1lP\nt2GvBqPtVvD/JOnzDb8vyudVhru/nf/zHUk/1+jpSdUMm9lCaewc8VSP+xnH3d9pGDZpm6QVvexn\nssFeVaFt2Gww2m5sw24Ff0jSP5vZYjP7B0m3S3qqS+suZGZz87+8MrN5kr4i6dXediVp9Fyv8Xzv\nKUnr8um7Je2d+IIuG9dfHqRPfF2934Y7JB1290cb5lVpG36qv25tw659cy+/LPGoRv/YbHf373Vl\nxS0ws3/S6F7eNTp0+E963Z+ZDUqqSfqspGFJ/ZL+R9J/S/qcpOOSbnP39yrU35fVwkCqXeqv2WCv\nL0naox5vw7KD0ZZeP1/ZBeLhwz0gIIIPBETwgYAIPhAQwQcCIvhAQAQfCIjgAwH9DcP16bMsMH8a\nAAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x1a544b9ada0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
