--- a/DeepLearningStudy/ex_lab-11-5-mnist_cnn_ensemble_layers.ipynb
+++ b/DeepLearningStudy/ex_lab-11-5-mnist_cnn_ensemble_layers.ipynb
@@ -218,26 +218,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost = [ 0.80927867  0.7697585 ]\n",
-      "Epoch: 0002 cost = [ 0.28742726  0.28437267]\n",
-      "Epoch: 0003 cost = [ 0.22649915  0.22419539]\n",
-      "Epoch: 0004 cost = [ 0.19954427  0.19864058]\n",
-      "Epoch: 0005 cost = [ 0.17690489  0.18551915]\n",
-      "Epoch: 0006 cost = [ 0.16791825  0.17321355]\n",
-      "Epoch: 0007 cost = [ 0.15992333  0.1648607 ]\n",
-      "Epoch: 0008 cost = [ 0.15267682  0.15693319]\n",
-      "Epoch: 0009 cost = [ 0.14669642  0.14774964]\n",
-      "Epoch: 0010 cost = [ 0.14433839  0.14655845]\n",
-      "Epoch: 0011 cost = [ 0.13976665  0.14408843]\n",
-      "Epoch: 0012 cost = [ 0.14038739  0.13979949]\n",
-      "Epoch: 0013 cost = [ 0.13331413  0.13921839]\n",
-      "Epoch: 0014 cost = [ 0.13461932  0.13662166]\n",
-      "Epoch: 0015 cost = [ 0.13715425  0.13361605]\n",
-      "Epoch: 0016 cost = [ 0.13415252  0.13273994]\n",
-      "Epoch: 0017 cost = [ 0.12961433  0.13409522]\n",
-      "Epoch: 0018 cost = [ 0.12782142  0.13143316]\n",
-      "Epoch: 0019 cost = [ 0.12646696  0.13068401]\n",
-      "Epoch: 0020 cost = [ 0.12770792  0.13137442]\n",
+      "Epoch: 0001 cost = [ 0.80489923  0.77750642]\n",
+      "Epoch: 0002 cost = [ 0.28796703  0.28955745]\n",
+      "Epoch: 0003 cost = [ 0.22906987  0.23004736]\n",
+      "Epoch: 0004 cost = [ 0.19678578  0.20400795]\n",
+      "Epoch: 0005 cost = [ 0.1791108   0.18504751]\n",
+      "Epoch: 0006 cost = [ 0.17149592  0.16972056]\n",
+      "Epoch: 0007 cost = [ 0.16428991  0.16172063]\n",
+      "Epoch: 0008 cost = [ 0.1562142   0.15850062]\n",
+      "Epoch: 0009 cost = [ 0.15039727  0.15601128]\n",
+      "Epoch: 0010 cost = [ 0.14415214  0.15006296]\n",
+      "Epoch: 0011 cost = [ 0.14409209  0.14185719]\n",
+      "Epoch: 0012 cost = [ 0.14013207  0.14267304]\n",
+      "Epoch: 0013 cost = [ 0.13492934  0.13966386]\n",
+      "Epoch: 0014 cost = [ 0.13904884  0.13664227]\n",
+      "Epoch: 0015 cost = [ 0.1337363   0.13590228]\n",
+      "Epoch: 0016 cost = [ 0.13530043  0.13586126]\n",
+      "Epoch: 0017 cost = [ 0.13203864  0.13298351]\n",
+      "Epoch: 0018 cost = [ 0.13105988  0.13220482]\n",
+      "Epoch: 0019 cost = [ 0.13175984  0.12980406]\n",
+      "Epoch: 0020 cost = [ 0.12419469  0.13048   ]\n",
       "Learning Finished!\n"
      ]
     }
@@ -278,20 +278,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 Accuracy: 0.9905\n",
-      "1 Accuracy: 0.9917\n",
-      "Ensemble accuracy: 0.9918\n"
+      "0 Accuracy: 0.991\n",
+      "1 Accuracy: 0.9901\n",
+      "Ensemble accuracy: 0.9909\n"
      ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADrlJREFUeJzt3W+sFfWdx/HPlz/7oNUI1gWibK1iFo0GkU01GzZxGhT/\nNYGUyFKJgVqMD0qXbJ+U+sB7MZvYbqKGjeGBAhU2GIoYVBrWtZWebFxhJVUqCl5rEKkUrqwRLUaU\nP999cA93L9d7f3PunXPODHzfr+SGufOdM/PlwOfMzJl/5u4CEMuIshsA0H4EHwiI4AMBEXwgIIIP\nBETwgYAKBd/MbjWzt83sHTP7abOaAtBaNtzj+GY2QtI7kmZI+rOkHZLmufvb/abjRAGgJO5uA40v\nssa/XtIf3f19dz8uab2kWYMsvPeno6PjjN+r9kN/525/Ve6tFf2lFAn+JZL+1Of3D+rjAFQcX+4B\nAY0q8NoDkr7Z5/eJ9XFf0dnZ2Ts8ZsyYAotsvSzLym4hif6Gr8q9ScX7q9VqqtVqDU1b5Mu9kZK6\n1PPl3kFJr0r6vrvv6TedD3cZAIbPzOSDfLk37DW+u580s8WSXlTPLsOq/qEHUE3DXuM3vADW+EAp\nUmt8vtwDAiL4QEAEHwiI4AMBEXwgIIIPBETwgYAIPhAQwQcCIvhAQAQfCIjgAwERfCAggg8ERPCB\ngAg+EBDBBwIi+EBABB8IiOADARF8ICCCDwRE8IGACD4QEMEHAiL4QEAEHwiI4AMBEXwgIIIPBETw\ngYBGFXmxme2T9ImkU5KOu/v1zWgKQGsVCr56Ap+5+8fNaAZAexTd1LcmzANAmxUNrUv6jZntMLN7\nm9EQgNYruqk/3d0Pmtlfq+cDYI+7v9x/os7Ozt7hLMuUZVnBxQLor1arqVarNTStuXtTFmpmHZL+\n4u6P9BvvzVoGgMaZmdzdBqoNe1PfzL5mZufVh78uaaakN4c7PwDtU2RTf7ykTWbm9fmsc/cXm9MW\ngFZq2qb+oAtgUx8oRUs29QGcvQg+EBDBBwIi+EBABB8IiOADARF8IKCi5+qjZCdPnkzWP/3002R9\n3bp1yfqRI0cKvb6rqytZL2rBggXJ+qpVq5L1ESNirvti/q2B4Ag+EBDBBwIi+EBABB8IiOADARF8\nICCux6+4vOPoy5cvT9YffPDBQsvP+7czG/By714zZ85M1vfu3Zusv/vuu8l6ni1btiTrt9xyS6H5\nVxnX4wM4A8EHAiL4QEAEHwiI4AMBEXwgIIIPBMT1+C322WefJesrVqxI1vOO0x88eDBZnzRpUrI+\nZ86cZH3JkiXJep6LLrooWf/oo4+S9YsvvrjQ8qdNm1bo9ecq1vhAQAQfCIjgAwERfCAggg8ERPCB\ngAg+EFDucXwzWyXpu5K63X1KfdxYSb+SdKmkfZLmuvsnLeyzNMePH0/Wt23blqzfdtttyfqxY8eS\n9bFjxybrmzdvTtbzrocfNarcUzmeeeaZZD2vvyeffDJZ37RpU7J+/vnnJ+tz585N1keOHJmsV1Uj\na/xfSup/t4Klkn7r7pMlbZX0s2Y3BqB1coPv7i9L+rjf6FmS1tSH10ia3eS+ALTQcPfxx7l7tyS5\n+yFJ45rXEoBWa9YOXvLGbJ2dnb3DWZYpy7ImLRbAabVaTbVaraFphxv8bjMb7+7dZjZB0oepifsG\nH0Br9F+pLlu2bNBpG93Ut/rPac9LWlgfXiDpuaE0CKBcucE3s6ckvSLpb81sv5n9QNLPJd1sZl2S\nZtR/B3CWyN3Ud/e7Bind1OReKumll15K1u+4445C81+0aFGy3tHRkawXvV69bF9++WWyft111yXr\nW7duTdZXr1495J6Gsvwrr7yy0PzLwpl7QEAEHwiI4AMBEXwgIIIPBETwgYAIPhAQ99XPkXe9d57b\nb789WX/ooYeS9QsvvLDQ8qvu8ccfT9a7urqS9R07dhRa/vz585P1yy67rND8q4o1PhAQwQcCIvhA\nQAQfCIjgAwERfCAggg8EZO7J2+UVX4CZt3oZRRw5ciRZv+aaa5L1U6dOJev79+9P1su+r31Rec+3\nf/bZZ5P1xYsXJ+t51+vnybsv/tq1a5P10aNHF1p+mcxM7m4D1VjjAwERfCAggg8ERPCBgAg+EBDB\nBwIi+EBAZ/dB5CbIe7553nHcw4cPJ+tvvfVWsn7ttdcm60V98cUXyfq2bduS9RdeeCFZ37hxY7L+\n3nvvJetF3Xzzzcn6uXycvgjW+EBABB8IiOADARF8ICCCDwRE8IGACD4QUO71+Ga2StJ3JXW7+5T6\nuA5J90r6sD7Z/e4+4AHfql+Pn+eee+5J1tesWZOsjxkzJlmfMWPGkHsaigMHDiTr27dvT9Yb+P8x\n5J6a6ZVXXknWb7jhhjZ1Uj1Fr8f/paRbBhj/iLtPq/+kz/IAUCm5wXf3lyV9PECp3I96AMNWZB9/\nsZntNLOVZnZB0zoC0HLDPVd/haQH3d3N7F8kPSLph4NN3NnZ2TucZZmyLBvmYgEMplarqVarNTTt\nsILv7n2vTHlC0ubU9H2DD6A1+q9Uly1bNui0jW7qm/rs05vZhD6170l6c0gdAihV7hrfzJ6SlEn6\nhpntl9Qh6TtmNlXSKUn7JN3Xwh4BNFn4++rn2bt3b7J+1VVXJesnTpxoZjtDNnny5GT9scceS9an\nTZtWaPl53+fs2rUrWd+wYUOyPmvWrGT9bH9uQRHcVx/AGQg+EBDBBwIi+EBABB8IiOADARF8IKC4\nBzkbdPnllyfru3fvTtZfe+21ZrbzFePGjUvWb7zxxkLzP3nyZLL+8MMPJ+tvvPFGsn711Vcn63Pm\nzEnWMTys8YGACD4QEMEHAiL4QEAEHwiI4AMBEXwgIK7HR9LTTz+drM+bN6/Q/PPu+z9hwoRkHYPj\nenwAZyD4QEAEHwiI4AMBEXwgIIIPBETwgYC4Hj+4Q4cOJeuLFy8uNP9FixYl6+PHjy80fwwPa3wg\nIIIPBETwgYAIPhAQwQcCIvhAQAQfCCj3enwzmyhpraTxkk5JesLd/83Mxkr6laRLJe2TNNfdPxng\n9VyPX6ITJ04k61OmTEnW9+zZk6zffffdyfrq1auT9cjPr2+1otfjn5D0E3e/WtLfS/qRmV0paamk\n37r7ZElbJf2sWQ0DaK3c4Lv7IXffWR8+KmmPpImSZklaU59sjaTZrWoSQHMNaR/fzL4laaqk7ZLG\nu3u31PPhICn9LCcAldHwDpaZnSdpo6Ql7n7UzPrvuA+6I9/Z2dk7nGWZsiwbWpcActVqNdVqtYam\nbehmm2Y2StKvJf2Huy+vj9sjKXP3bjObIOl37n7VAK/ly70S8eVeXM242eZqSbtPh77ueUkL68ML\nJD037A4BtFXux62ZTZc0X9IuM3tdPZv090v6haQNZnaPpPclzW1lowCah/vqn+WOHz+erK9fvz5Z\nX7hwYbI+adKkZH3Lli3J+hVXXJGso3W4rz6AMxB8ICCCDwRE8IGACD4QEMEHAiL4QEAcxz/Lbd++\nPVmfPn16ofnnnQdw5513Fpo/Wofj+ADOQPCBgAg+EBDBBwIi+EBABB8IiOADAXHfo4rr6upK1m+6\n6aZC83/ggQeS9dmzuXnyuYg1PhAQwQcCIvhAQAQfCIjgAwERfCAggg8ExHH8kh07dixZ37BhQ7L+\n+eefJ+t51+MvXbo0WR89enSyjrMTa3wgIIIPBETwgYAIPhAQwQcCIvhAQLnBN7OJZrbVzN4ys11m\n9uP6+A4z+8DMXqv/3Nr6dgE0Q+599c1sgqQJ7r7TzM6T9HtJsyT9o6S/uPsjOa/nvvoJ9913X7K+\ncuXKZP2CCy5I1rdu3ZqsT506NVnH2St1X/3cE3jc/ZCkQ/Xho2a2R9Ilp+fdtC4BtM2Q9vHN7FuS\npkr6n/qoxWa208xWmll61QOgMhoOfn0zf6OkJe5+VNIKSZe7+1T1bBEkN/kBVEdD5+qb2Sj1hP7f\n3f05SXL3w30meULS5sFe39nZ2TucZZmyLBtGqwBSarWaarVaQ9M29NBMM1sr6X/d/Sd9xk2o7//L\nzP5Z0rfd/a4BXsuXewl8uYdWKfTlnplNlzRf0i4ze12SS7pf0l1mNlXSKUn7JKX/BwOojEa+1f9v\nSSMHKL3Q/HYAtAPX45ds3LhxyfqoUel/okcffTRZZ1MeA+GUXSAggg8ERPCBgAg+EBDBBwIi+EBA\nBB8IqKFTdgstgFN2gVKkTtlljQ8ERPCBgAg+EFDbg9/o9cJlob9iqtxflXuT2tsfwe+H/oqpcn9V\n7k06x4MPoHwEHwioLcfxW7oAAIMa7Dh+y4MPoHrY1AcCIvhAQG0LvpndamZvm9k7ZvbTdi23UWa2\nz8z+YGavm9mrFehnlZl1m9kbfcaNNbMXzazLzP6zzKcXDdJfZR6kOsDDXv+pPr4S72HZD6Ntyz6+\nmY2Q9I6kGZL+LGmHpHnu/nbLF94gM9sr6e/c/eOye5EkM/sHSUclrXX3KfVxv5D0kbv/a/3Dc6y7\nL61Qfx1q4EGq7ZB42OsPVIH3sOjDaItq1xr/ekl/dPf33f24pPXq+UtWialCuz7u/rKk/h9CsySt\nqQ+vkTS7rU31MUh/UkUepOruh9x9Z334qKQ9kiaqIu/hIP217WG07fqPfomkP/X5/QP9/1+yKlzS\nb8xsh5ndW3Yzgxjn7t1S71OM0/fmLkflHqTa52Gv2yWNr9p7WMbDaCuzhquA6e4+TdLtkn5U35St\nuqodi63cg1QHeNhr//es1PewrIfRtiv4ByR9s8/vE+vjKsPdD9b/PCxpk3p2T6qm28zGS737iB+W\n3M8Z3P1wn7uuPCHp22X2M9DDXlWh93Cwh9G24z1sV/B3SLrCzC41s7+SNE/S821adi4z+1r9k1dm\n9nVJMyW9WW5Xknr29fru7z0vaWF9eIGk5/q/oM3O6K8epNO+p/Lfw9WSdrv78j7jqvQefqW/dr2H\nbTtzr35YYrl6PmxWufvP27LgBpjZZepZy7t6Hiu2ruz+zOwpSZmkb0jqltQh6VlJT0v6G0nvS5rr\n7kcq1N931LOv2vsg1dP70yX0N13Sf0napZ5/19MPe31V0gaV/B4m+rtLbXgPOWUXCIgv94CACD4Q\nEMEHAiL4QEAEHwiI4AMBEXwgIIIPBPR/24cfIcYUoHQAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x223e5b63198>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "data": {
