--- a/DeepLearningStudy/ex_lab-11-2-mnist_deep_cnn.ipynb
+++ b/DeepLearningStudy/ex_lab-11-2-mnist_deep_cnn.ipynb
@@ -126,11 +126,11 @@
    "source": [
     "# Step 4 + 5: create weights + do inference\n",
     "> the model is <br/>\n",
-    " $\\qquad$ conv $\\rightarrow$ relu $\\rightarrow$ pool $\\rightarrow$ dropOut  $\\rightarrow$ <br/>\n",
-    " $\\qquad$ conv $\\rightarrow$ relu $\\rightarrow$ pool $\\rightarrow$ dropOut  $\\rightarrow$ <br/>\n",
-    " $\\qquad$ conv $\\rightarrow$ relu $\\rightarrow$ pool $\\rightarrow$ dropOut $\\rightarrow$  <br/>\n",
-    " $\\qquad$ relu $\\rightarrow$ dropOut  $\\rightarrow$  <br/>\n",
-    " $\\qquad$ fully connected $\\rightarrow$ softmax\n"
+    "conv $\\rightarrow$ relu $\\rightarrow$ pool $\\rightarrow$ dropOut  $\\rightarrow$ <br/>\n",
+    "conv $\\rightarrow$ relu $\\rightarrow$ pool $\\rightarrow$ dropOut  $\\rightarrow$ <br/>\n",
+    "conv $\\rightarrow$ relu $\\rightarrow$ pool $\\rightarrow$ dropOut $\\rightarrow$  <br/>\n",
+    "relu $\\rightarrow$ dropOut  $\\rightarrow$  <br/>\n",
+    "fully connected $\\rightarrow$ softmax\n"
    ]
   },
   {
