--- a/DeepLearningStudy/ex_lab-11-5-mnist_cnn_ensemble_layers.ipynb
+++ b/DeepLearningStudy/ex_lab-11-5-mnist_cnn_ensemble_layers.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define paramaters for the model"
+    "# Define class for the model"
    ]
   },
   {
@@ -126,18 +126,22 @@
     "            self.Y = tf.placeholder(tf.float32, [None, 10])\n",
     "\n",
     "            # Convolutional Layer #1\n",
-    "            conv1 = tf.layers.conv2d(inputs=X_img, filters=32, kernel_size=[3, 3], padding=\"SAME\", activation=tf.nn.relu)\n",
+    "            conv1 = tf.layers.conv2d(inputs=X_img, filters=32, kernel_size=[3, 3], \n",
+    "                                     padding=\"SAME\", activation=tf.nn.relu)\n",
     "            # Pooling Layer #1\n",
-    "            pool1 = tf.layers.max_pooling2d(inputs=conv1, pool_size=[2, 2], padding=\"SAME\", strides=2)\n",
+    "            pool1 = tf.layers.max_pooling2d(inputs=conv1, pool_size=[2, 2], \n",
+    "                                     padding=\"SAME\", strides=2)\n",
     "            dropout1 = tf.layers.dropout(inputs=pool1, rate=0.7, training=self.training)\n",
     "\n",
     "            # Convolutional Layer #2 and Pooling Layer #2\n",
-    "            conv2 = tf.layers.conv2d(inputs=dropout1, filters=64, kernel_size=[3, 3], padding=\"SAME\", activation=tf.nn.relu)\n",
+    "            conv2 = tf.layers.conv2d(inputs=dropout1, filters=64, kernel_size=[3, 3], \n",
+    "                                     padding=\"SAME\", activation=tf.nn.relu)\n",
     "            pool2 = tf.layers.max_pooling2d(inputs=conv2, pool_size=[2, 2], padding=\"SAME\", strides=2)\n",
     "            dropout2 = tf.layers.dropout(inputs=pool2, rate=0.7, training=self.training)\n",
     "\n",
     "            # Convolutional Layer #3 and Pooling Layer #3\n",
-    "            conv3 = tf.layers.conv2d(inputs=dropout2, filters=128, kernel_size=[3, 3], padding=\"SAME\", activation=tf.nn.relu)\n",
+    "            conv3 = tf.layers.conv2d(inputs=dropout2, filters=128, kernel_size=[3, 3], \n",
+    "                                     padding=\"SAME\", activation=tf.nn.relu)\n",
     "            pool3 = tf.layers.max_pooling2d(inputs=conv3, pool_size=[2, 2], padding=\"SAME\", strides=2)\n",
     "            dropout3 = tf.layers.dropout(inputs=pool3, rate=0.7, training=self.training)\n",
     "\n",
@@ -218,26 +222,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost = [ 0.80489923  0.77750642]\n",
-      "Epoch: 0002 cost = [ 0.28796703  0.28955745]\n",
-      "Epoch: 0003 cost = [ 0.22906987  0.23004736]\n",
-      "Epoch: 0004 cost = [ 0.19678578  0.20400795]\n",
-      "Epoch: 0005 cost = [ 0.1791108   0.18504751]\n",
-      "Epoch: 0006 cost = [ 0.17149592  0.16972056]\n",
-      "Epoch: 0007 cost = [ 0.16428991  0.16172063]\n",
-      "Epoch: 0008 cost = [ 0.1562142   0.15850062]\n",
-      "Epoch: 0009 cost = [ 0.15039727  0.15601128]\n",
-      "Epoch: 0010 cost = [ 0.14415214  0.15006296]\n",
-      "Epoch: 0011 cost = [ 0.14409209  0.14185719]\n",
-      "Epoch: 0012 cost = [ 0.14013207  0.14267304]\n",
-      "Epoch: 0013 cost = [ 0.13492934  0.13966386]\n",
-      "Epoch: 0014 cost = [ 0.13904884  0.13664227]\n",
-      "Epoch: 0015 cost = [ 0.1337363   0.13590228]\n",
-      "Epoch: 0016 cost = [ 0.13530043  0.13586126]\n",
-      "Epoch: 0017 cost = [ 0.13203864  0.13298351]\n",
-      "Epoch: 0018 cost = [ 0.13105988  0.13220482]\n",
-      "Epoch: 0019 cost = [ 0.13175984  0.12980406]\n",
-      "Epoch: 0020 cost = [ 0.12419469  0.13048   ]\n",
+      "Epoch: 0001 cost = [ 0.82301329  0.78710558]\n",
+      "Epoch: 0002 cost = [ 0.29245963  0.29475425]\n",
+      "Epoch: 0003 cost = [ 0.22505855  0.2326298 ]\n",
+      "Epoch: 0004 cost = [ 0.19634524  0.19933481]\n",
+      "Epoch: 0005 cost = [ 0.17925078  0.18856686]\n",
+      "Epoch: 0006 cost = [ 0.1685262   0.17661244]\n",
+      "Epoch: 0007 cost = [ 0.16255084  0.16589968]\n",
+      "Epoch: 0008 cost = [ 0.15454819  0.15984705]\n",
+      "Epoch: 0009 cost = [ 0.15454049  0.15112051]\n",
+      "Epoch: 0010 cost = [ 0.1446972   0.14796367]\n",
+      "Epoch: 0011 cost = [ 0.14484089  0.1460067 ]\n",
+      "Epoch: 0012 cost = [ 0.14009409  0.14440217]\n",
+      "Epoch: 0013 cost = [ 0.13837107  0.14274602]\n",
+      "Epoch: 0014 cost = [ 0.13534261  0.13822107]\n",
+      "Epoch: 0015 cost = [ 0.13181176  0.13530688]\n",
+      "Epoch: 0016 cost = [ 0.12791288  0.13616303]\n",
+      "Epoch: 0017 cost = [ 0.1297734   0.13808447]\n",
+      "Epoch: 0018 cost = [ 0.12941699  0.13592612]\n",
+      "Epoch: 0019 cost = [ 0.12777477  0.12895046]\n",
+      "Epoch: 0020 cost = [ 0.12475849  0.13268489]\n",
       "Learning Finished!\n"
      ]
     }
@@ -278,10 +282,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 Accuracy: 0.991\n",
-      "1 Accuracy: 0.9901\n",
-      "Ensemble accuracy: 0.9909\n"
+      "0 Accuracy: 0.9902\n",
+      "1 Accuracy: 0.9904\n",
+      "Ensemble accuracy: 0.9905\n",
+      "Label:  [4]\n",
+      "Prediction:  [4]\n"
      ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADhVJREFUeJzt3W9sXfV9x/HPN0GW8kc0EBZbwgkdGpRpCFmdEphA4iSU\n1oKioDwAlghImVAfNFtFnyQFIV8QD9IJITGhIkRSk6CitovSQiLYaOUdWWxqiFizkSWYSMNpaIn5\nO5SAAmz57oFPXMe1f/f6/j3x9/2SLI7P91yfb6743PP3np+5uwDEMq/TDQBoP4IPBETwgYAIPhAQ\nwQcCIvhAQA0F38z6zewNM3vTzDY3qykArWX1Xsc3s3mS3pR0g6TfS9ov6Q53f2PKctwoAHSIu9t0\n8xvZ4q+SdMTdj7r7F5J+ImntDCuf+BkYGDjr97L90N/c7a/MvbWiv5RGgn+xpGOTfn+7mAeg5Di5\nBwR0XgOv/Z2kFZN+7y3m/ZFKpTIxvWTJkgZW2XpZlnW6hST6q1+Ze5Ma7y/Pc+V5XtOyjZzcmy9p\nROMn996R9Kqkv3b3w1OW83rXAaB+Ziaf4eRe3Vt8d/8/M9sk6WWNHzJsnxp6AOVU9xa/5hWwxQc6\nIrXF5+QeEBDBBwIi+EBABB8IiOADARF8ICCCDwRE8IGACD4QEMEHAiL4QEAEHwiI4AMBEXwgIIIP\nBETwgYAIPhAQwQcCIvhAQAQfCIjgAwERfCAggg8ERPCBgAg+EBDBBwIi+EBABB8IiOADARF8ICCC\nDwR0XiMvNrNRSR9LOi3pC3df1Yym8Aeff/55sv7JJ58k63v27EnW161bl6wvWLAgWZ8/f36yXnZm\n0w4fP+Hmm29O1vfu3dvMdtqmoeBrPPCZu3/UjGYAtEeju/rWhL8BoM0aDa1L+qWZ7Teze5vREIDW\na3RX/1p3f8fM/kTjHwCH3f2VqQtVKpWJ6SzLlGVZg6sFMFWe58rzvKZlzd2bslIzG5B0wt0fmzLf\nm7WOiDi511pz+eSemcndp/0H1r2rb2YLzWxxMb1I0tclHaz37wFon0Z29bsl/dzMvPg7P3b3l5vT\nFoBWqjv47v6WpL4m9oJpbNiwIVnfvXt3sr5w4cJkfXh4OFl/4oknkvWy7+oPDQ0l611dXcn6I488\n0sx2SoNLcUBABB8IiOADARF8ICCCDwRE8IGACD4QUKP36qPF9u3b19Drb7/99mR927ZtDf39Tjt0\n6FCyfssttyTrq1evTtb7+ubmrSps8YGACD4QEMEHAiL4QEAEHwiI4AMBEXwgIK7jz3F33nlnp1to\nyIkTJ5L1TZs2JeufffZZsl7teQZzFVt8ICCCDwRE8IGACD4QEMEHAiL4QEAEHwiI6/jnuEWLFiXr\nl156aZs6aY377rsvWa82LsCaNWuS9WrjDsxVbPGBgAg+EBDBBwIi+EBABB8IiOADARF8IKCq1/HN\nbLukb0oac/erinkXSPqppEskjUq6zd0/bmGfYZ0+fTpZP//885P15cuXN7Odptu1a1eyPjg4mKxf\nf/31yfrevXtn3VMEtWzxByV9Y8q8LZJ+5e5fkTQk6fvNbgxA61QNvru/IumjKbPXStpRTO+QdGuT\n+wLQQvUe4y9z9zFJcvfjkpY1ryUArdase/U9VaxUKhPTWZYpy7ImrRbAGXmeK8/zmpatN/hjZtbt\n7mNm1iPp3dTCk4MPoDWmblQfeuihGZetdVffip8zXpC0sZi+W9Lzs2kQQGdVDb6ZPSfp3yRdbma/\nNbNvSdoq6UYzG5F0Q/E7gHNE1V19d18/Q+lrTe4F05g379y+x+rDDz9M1gcGBpJ1M0vW+/v7k/Wu\nrq5kPapz+/8qAHUh+EBABB8IiOADARF8ICCCDwRE8IGAeK4+WuqBBx5I1kdGRpL1at+3v+mmm5L1\n999/P1m/6KKLkvW5ii0+EBDBBwIi+EBABB8IiOADARF8ICCCDwRk7snH5TW+AjNv9TrmshUrViTr\nY2Njyfq+ffuS9b6+vln3NNnQ0FCyfuONNybr1b5vX23cgMsvvzxZf/HFF5P1Cy+8MFk/l5mZ3H3a\nN5gtPhAQwQcCIvhAQAQfCIjgAwERfCAggg8ExPfxS27NmjXJ+rPPPpus33XXXcn68PBwsn7q1Klk\nfePGjcl6o7q7u5P1Rx99NFmfy9fpG8EWHwiI4AMBEXwgIIIPBETwgYAIPhAQwQcCqvp9fDPbLumb\nksbc/api3oCkeyW9Wyx2v7v/0wyv5/v4DTh69GiyfuWVVybrn376aTPbmbVq37dfuXJlsv7SSy8l\n60uWLJl1T1E0+n38QUnfmGb+Y+7+1eJn2tADKKeqwXf3VyR9NE0p/VEOoLQaOcbfZGYHzGybmX2p\naR0BaLl679X/oaSH3d3N7BFJj0n6m5kWrlQqE9NZlinLsjpXC2AmeZ4rz/Oalq3pYZtmdomkPWdO\n7tVaK+qc3GsAJ/c4uVevZjxs0zTpmN7MeibV1kk6WH97ANqt6q6+mT0nKZO01Mx+K2lA0moz65N0\nWtKopG+3sEcATcZz9c9xx44dS9YffvjhZH1wcLCh9ff09CTru3btStavueaahtaPmfFcfQBnIfhA\nQAQfCIjgAwERfCAggg8ERPCBgLiOP8e99tpryfrVV1+drC9fvjxZf/LJJ5P1/v7+ZB2tw3V8AGch\n+EBABB8IiOADARF8ICCCDwRE8IGAuI5/jjty5Eiyft111yXrH3zwQbJ+8GD64UpXXHFFso7O4To+\ngLMQfCAggg8ERPCBgAg+EBDBBwIi+EBA9Y6dh5LYsmVLsl7tOv1ll12WrPf29s66J5QfW3wgIIIP\nBETwgYAIPhAQwQcCIvhAQAQfCKjqdXwz65W0U1K3pNOSnnb3fzCzCyT9VNIlkkYl3ebuH7ew15BG\nRkaS9d27dyfrXV1dyfqDDz6YrC9evDhZx7mpli3+/0r6nrv/haS/kvQdM7tC0hZJv3L3r0gakvT9\n1rUJoJmqBt/dj7v7gWL6pKTDknolrZW0o1hsh6RbW9UkgOaa1TG+mX1ZUp+kX0vqdvcxafzDQdKy\nZjcHoDVqvlffzBZL2iXpu+5+0symPkhvxgfrVSqVieksy5Rl2ey6BFBVnufK87ymZWt62KaZnSdp\nr6SX3P3xYt5hSZm7j5lZj6R/cfc/n+a1PGyzAdVO7lV72GW1k3uDg4PJ+vr165N1lFczHrb5I0mH\nzoS+8IKkjcX03ZKer7tDAG1Vy+W8ayVtkPS6mf1G47v090v6gaSfmdk9ko5Kuq2VjQJonqrBd/d/\nlTR/hvLXmttOPKdOnUrWN2/enKzPm5feaVu3bl2yzq58TNy5BwRE8IGACD4QEMEHAiL4QEAEHwiI\n4AMB1XTLbkMr4JbdpHvuuSdZ37lzZ7Je7b1dtWpVsr5y5cpkfevWrcn6woULk3V0TjNu2QUwhxB8\nICCCDwRE8IGACD4QEMEHAiL4QEA1P3MP9Tlx4kSyPjw83NL1v/XWW8n6M888k6xznX5uYosPBETw\ngYAIPhAQwQcCIvhAQAQfCIjgAwFxHb/FFixYkKwvXbo0WR8dHU3WN2zYkKw/9dRTyXq1/jA3scUH\nAiL4QEAEHwiI4AMBEXwgIIIPBFQ1+GbWa2ZDZvZfZva6mf1tMX/AzN42s38vfvpb3y6AZqj6XH0z\n65HU4+4HzGyxpNckrZV0u6QT7v5YldfzXH2gA1LP1a96A4+7H5d0vJg+aWaHJV185m83rUsAbTOr\nY3wz+7KkPkn7ilmbzOyAmW0zsy81uTcALVJz8Ivd/F2SvuvuJyX9UNKl7t6n8T2C5C4/gPKo6V59\nMztP46F/1t2flyR3f2/SIk9L2jPT6yuVysR0lmXKsqyOVgGk5HmuPM9rWramQTPNbKek9939e5Pm\n9RTH/zKz+yStdPf107yWk3tAB6RO7tVyVv9aScOSXpfkxc/9ktZr/Hj/tKRRSd9297FpXk/wgQ5o\nKPhNWDnBBzqAYbIBnIXgAwERfCAggg8ERPCBgAg+EBDBBwIi+EBABB8IiOADARF8ICCCDwTU9uDX\n+n3hTqG/xpS5vzL3JrW3P4I/Bf01psz9lbk3aY4HH0DnEXwgoLY8iKOlKwAwo449gQdA+bCrDwRE\n8IGA2hZ8M+s3szfM7E0z29yu9dbKzEbN7D/M7Ddm9moJ+tluZmNm9p+T5l1gZi+b2YiZ/XMnRy+a\nob/SDKQ6zWCvf1fML8V72OnBaNtyjG9m8yS9KekGSb+XtF/SHe7+RstXXiMz+29Jf+nuH3W6F0ky\ns+sknZS0092vKub9QNIH7v73xYfnBe6+pUT9DaiGgVTbITHY67dUgvew0cFoG9WuLf4qSUfc/ai7\nfyHpJxr/R5aJqUSHPu7+iqSpH0JrJe0opndIurWtTU0yQ39SSQZSdffj7n6gmD4p6bCkXpXkPZyh\nv7YNRtuu/9EvlnRs0u9v6w//yLJwSb80s/1mdm+nm5nBsjODlhSjGC3rcD/TKd1AqpMGe/21pO6y\nvYedGIy2NFu4ErjW3b8q6SZJ3yl2ZcuubNdiSzeQ6jSDvU59zzr6HnZqMNp2Bf93klZM+r23mFca\n7v5O8d/3JP1c44cnZTNmZt3SxDHiux3u5yzu/t6kYZOelrSyk/1MN9irSvQezjQYbTvew3YFf7+k\nPzOzS8ysS9Idkl5o07qrMrOFxSevzGyRpK9LOtjZriSNH+tNPt57QdLGYvpuSc9PfUGbndVfEaQz\n1qnz7+GPJB1y98cnzSvTe/hH/bXrPWzbnXvFZYnHNf5hs93dt7ZlxTUwsz/V+FbeNT50+I873Z+Z\nPScpk7RU0pikAUm/kPSPkpZLOirpNnf/nxL1t1o1DKTapv5mGuz1VUk/U4ffw0YHo214/dyyC8TD\nyT0gIIIPBETwgYAIPhAQwQcCIvhAQAQfCIjgAwH9Pzk93mgOh9ZpAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x206bc93ed68>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -309,14 +325,14 @@
     "\n",
     "print('Ensemble accuracy:', sess.run(ensemble_accuracy))\n",
     "\n",
-    "# # Get one and predict\n",
-    "# r = random.randint(0, mnist.test.num_examples - 1)\n",
-    "# print(\"Label: \", sess.run(tf.argmax(mnist.test.labels[r:r + 1], 1)))\n",
-    "# print(\"Prediction: \", tf.argmax(m1.predict(mnist.test.images[r:r + 1]),1))\n",
+    "# Get one and predict\n",
+    "r = random.randint(0, mnist.test.num_examples - 1)\n",
+    "print(\"Label: \", sess.run(tf.argmax(mnist.test.labels[r:r + 1], 1)))\n",
+    "print(\"Prediction: \", sess.run(tf.argmax(m.predict(mnist.test.images[r:r + 1]),1)))\n",
     "      \n",
-    "# # show image\n",
-    "# plt.imshow(mnist.test.images[r:r + 1].reshape(28, 28), cmap='Greys', interpolation='nearest')\n",
-    "# plt.show()\n",
+    "# show image\n",
+    "plt.imshow(mnist.test.images[r:r + 1].reshape(28, 28), cmap='Greys', interpolation='nearest')\n",
+    "plt.show()\n",
     "\n",
     "\n",
     "'''\n",
