--- a/DeepLearningStudy/ex_lab-11-4-mnist_cnn_layers.ipynb
+++ b/DeepLearningStudy/ex_lab-11-4-mnist_cnn_layers.ipynb
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define class for the Model"
+    "# Define Model class for the model"
    ]
   },
   {
@@ -123,18 +123,21 @@
     "            self.Y = tf.placeholder(tf.float32, [None, 10])\n",
     "\n",
     "            # Convolutional Layer #1\n",
-    "            conv1 = tf.layers.conv2d(inputs=X_img, filters=32, kernel_size=[3, 3], padding=\"SAME\", activation=tf.nn.relu)\n",
+    "            conv1 = tf.layers.conv2d(inputs=X_img, filters=32, kernel_size=[3, 3], \n",
+    "                                     padding=\"SAME\", activation=tf.nn.relu)\n",
     "            # Pooling Layer #1\n",
     "            pool1 = tf.layers.max_pooling2d(inputs=conv1, pool_size=[2, 2], padding=\"SAME\", strides=2)\n",
     "            dropout1 = tf.layers.dropout(inputs=pool1, rate=0.7, training=self.training)\n",
     "\n",
     "            # Convolutional Layer #2 and Pooling Layer #2\n",
-    "            conv2 = tf.layers.conv2d(inputs=dropout1, filters=64, kernel_size=[3, 3], padding=\"SAME\", activation=tf.nn.relu)\n",
+    "            conv2 = tf.layers.conv2d(inputs=dropout1, filters=64, kernel_size=[3, 3], \n",
+    "                                     padding=\"SAME\", activation=tf.nn.relu)\n",
     "            pool2 = tf.layers.max_pooling2d(inputs=conv2, pool_size=[2, 2], padding=\"SAME\", strides=2)\n",
     "            dropout2 = tf.layers.dropout(inputs=pool2, rate=0.7, training=self.training)\n",
     "\n",
     "            # Convolutional Layer #2 and Pooling Layer #2\n",
-    "            conv3 = tf.layers.conv2d(inputs=dropout2, filters=128, kernel_size=[3, 3], padding=\"same\", activation=tf.nn.relu)\n",
+    "            conv3 = tf.layers.conv2d(inputs=dropout2, filters=128, kernel_size=[3, 3], \n",
+    "                                     padding=\"same\", activation=tf.nn.relu)\n",
     "            pool3 = tf.layers.max_pooling2d(inputs=conv3, pool_size=[2, 2], padding=\"same\", strides=2)\n",
     "            dropout3 = tf.layers.dropout(inputs=pool3, rate=0.7, training=self.training)\n",
     "\n",
@@ -209,21 +212,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost = 0.807830760\n",
-      "Epoch: 0002 cost = 0.289452694\n",
-      "Epoch: 0003 cost = 0.223462271\n",
-      "Epoch: 0004 cost = 0.194386722\n",
-      "Epoch: 0005 cost = 0.177643204\n",
-      "Epoch: 0006 cost = 0.171638768\n",
-      "Epoch: 0007 cost = 0.160043782\n",
-      "Epoch: 0008 cost = 0.155880590\n",
-      "Epoch: 0009 cost = 0.148062895\n",
-      "Epoch: 0010 cost = 0.144914895\n",
-      "Epoch: 0011 cost = 0.140091372\n",
-      "Epoch: 0012 cost = 0.137003460\n",
-      "Epoch: 0013 cost = 0.136626785\n",
-      "Epoch: 0014 cost = 0.136067951\n",
-      "Epoch: 0015 cost = 0.131864852\n",
+      "Epoch: 0001 cost = 0.797854959\n",
+      "Epoch: 0002 cost = 0.288679899\n",
+      "Epoch: 0003 cost = 0.223793629\n",
+      "Epoch: 0004 cost = 0.195993067\n",
+      "Epoch: 0005 cost = 0.183838563\n",
+      "Epoch: 0006 cost = 0.172130005\n",
+      "Epoch: 0007 cost = 0.158926561\n",
+      "Epoch: 0008 cost = 0.150830866\n",
+      "Epoch: 0009 cost = 0.147733982\n",
+      "Epoch: 0010 cost = 0.141044258\n",
+      "Epoch: 0011 cost = 0.143588608\n",
+      "Epoch: 0012 cost = 0.136736037\n",
+      "Epoch: 0013 cost = 0.141265250\n",
+      "Epoch: 0014 cost = 0.135055084\n",
+      "Epoch: 0015 cost = 0.130794424\n",
       "Learning Finished!\n"
      ]
     }
@@ -260,8 +263,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9911\n"
+      "Accuracy: 0.9906\n",
+      "Label:  [5]\n",
+      "Prediction:  [5]\n"
      ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADbJJREFUeJzt3X+MHHUZx/HPUy4ktARLxOslnLYYoyQmtNFAIvWPNZVC\niEmbJiC2CVAJMaRYk/4jksDtiX+ofzQpPwoJtrY1kqpNtJiA/AiZkCpCEaqgBUyktGh7bQw/WkIJ\n2sc/bnruLbff3e7szk77vF/JpXPzzN483fZzM7Pfnf2auwtALLMG3QCA8hF8ICCCDwRE8IGACD4Q\nEMEHAioUfDO7ysxeMbPXzOy7vWoKQH9Zt+P4ZjZL0muSlkj6l6Tdkq5z91eatuONAsCAuLvNtL7I\nEf8ySX939zfc/UNJ2yUta7Hzqa+xsbFp31fti/7O3P6q3Fs/+kspEvwLJR1o+P7NfB2AiuPFPSCg\noQKP/aekTzV8P5qv+4h6vT61PHfu3AK77L9arTboFpLor3tV7k0q3l+WZcqyrKNti7y4d5akVzX5\n4t5BSc9J+oa7723azrvdB4DumZm8xYt7XR/x3f2/ZnarpMc1ecmwqTn0AKqp6yN+xzvgiA8MROqI\nz4t7QEAEHwiI4AMBEXwgIIIPBETwgYAIPhAQwQcCIvhAQAQfCIjgAwERfCAggg8ERPCBgAg+EBDB\nBwIi+EBABB8IiOADARF8ICCCDwRE8IGACD4QEMEHAiL4QEAEHwiI4AMBEXwgIIIPBETwgYAIPhDQ\nUJEHm9k+Se9IOiHpQ3e/rBdNAeivQsHXZOBr7v5WL5oBUI6ip/rWg58BoGRFQ+uSnjCz3WZ2cy8a\nAtB/RU/1F7v7QTP7hCZ/Aex1913NG9Xr9anlWq2mWq1WcLcAmmVZpizLOtrW3L0nOzWzMUlH3X19\n03rv1T4AdM7M5O42U63rU30zm21m5+bLcyQtlfRytz8PQHmKnOrPk/RrM/P85/zc3R/vTVsA+qln\np/otd8CpfqXt2bMnWT948GCyvnLlymT97bffTtavv/76ZH3dunXJ+sKFC5P1yPpyqg/g9EXwgYAI\nPhAQwQcCIvhAQAQfCIjgAwExjn+aO3r0aLLebpz86aefTtbbjcP329y5c5P1dvd93HPPPcn68PBw\nsj40VPR2lsFhHB/ANAQfCIjgAwERfCAggg8ERPCBgAg+EBDj+BX33nvvJetXX311sr5r10c+AhEN\n7r333mT9lltuKamT3mMcH8A0BB8IiOADARF8ICCCDwRE8IGACD4QEOP4FXfkyJFkfWRkpKROzkyz\nZqWPfXfeeWeyfscdd/SynZ5iHB/ANAQfCIjgAwERfCAggg8ERPCBgAg+EFDbDw03s02SviZpwt0v\nydedL+kXkuZL2ifpWnd/p499nrGOHz+erN91110lddKd8847L1m/6KKLkvVDhw4l6xMTE8n6Aw88\nkKx/8MEHyfrs2bOT9U2bNiXrVR7HT+nkiP9TSVc2rbtN0pPu/jlJT0n6Xq8bA9A/bYPv7rskvdW0\nepmkrfnyVknLe9wXgD7q9hp/2N0nJMndD0lKz0MEoFJ6NTFY8s349Xp9arlWq7Wd7wzAqcuyTFmW\ndbRtt8GfMLN57j5hZiOSDqc2bgw+gP5oPqiOj4+33LbTU33Lv056WNKN+fINknaeSoMABqtt8M3s\nIUl/kPRZM9tvZqsl/VDSFWb2qqQl+fcAThPcjz9gq1evTta3bdtWUiczW7lyZbK+du3aZP3SSy9N\n1l9//fVk/ZlnnknWly5dmqxfcMEFyfqZjPvxAUxD8IGACD4QEMEHAiL4QEAEHwiI4AMBMY4/YO3u\nB293P3lRN910U7K+cePGZH1oqFe3e6DXGMcHMA3BBwIi+EBABB8IiOADARF8ICCCDwTEIOyADQ+n\nP6f0wIEDhX7+8uXpD0DesGFDss44/ZmJIz4QEMEHAiL4QEAEHwiI4AMBEXwgIIIPBMQg7YBt2bIl\nWV+yZEmhn79///5k/f3330/WzznnnEL7RzVxxAcCIvhAQAQfCIjgAwERfCAggg8ERPCBgNqO45vZ\nJklfkzTh7pfk68Yk3SzpcL7Z7e7+u751ia698MILyfqjjz6arK9ataqX7aAiOjni/1TSlTOsX+/u\nX8i/CD1wGmkbfHffJemtGUozztABoPqKXOPfamZ7zOwnZvaxnnUEoO+6fa/+Rknfd3c3sx9IWi+p\n5SRs9Xp9arlWq6lWq3W5WwCtZFmmLMs62rajSTPNbL6k3558ca/TWl5n0syEdv9QRW/SaWfbtm3J\nOi/unb56MWmmqeGa3sxGGmorJL3cfXsAytbJcN5DkmqSPm5m+yWNSfqKmS2SdELSPknf6mOPAHqs\no1P9QjvgVD/p3XffTdavuOKKZP35558vtP8FCxYk63v37k3Wzz777EL7R//04lQfwBmE4AMBEXwg\nIIIPBETwgYAIPhAQwQcCYhy/4h577LFkvd389u0e384111yTrK9duzZZv/zyywvtH91jHB/ANAQf\nCIjgAwERfCAggg8ERPCBgAg+EBDj+Ke548ePJ+tr1qxJ1h955JFk/fDhw8n6lVfO9Mnr/7djx45k\nffbs2ck6usc4PoBpCD4QEMEHAiL4QEAEHwiI4AMBEXwgIMbxg3v22WeT9aL307ebgmvz5s3J+tBQ\nt9M7gnF8ANMQfCAggg8ERPCBgAg+EBDBBwIi+EBAbcfxzWxU0jZJ8ySdkPSgu99tZudL+oWk+ZL2\nSbrW3d+Z4fGM41dYu/v5V6xYkawX/dz+u+++O1lv93kCaK3oOP5/JK1z989L+pKkNWZ2saTbJD3p\n7p+T9JSk7/WqYQD91Tb47n7I3ffky8ck7ZU0KmmZpK35ZlslLe9XkwB665Su8c1sgaRFkv4oaZ67\nT0iTvxwkDfe6OQD90fEboc3sXEk7JH3H3Y+ZWfOFe8sL+Xq9PrVcq9VUq9VOrUsAbWVZpizLOtq2\no+Cb2ZAmQ/8zd9+Zr54ws3nuPmFmI5JafipjY/AB9EfzQXV8fLzltp2e6m+W9Dd3b5ya9WFJN+bL\nN0ja2fwgANXU9ohvZoslrZL0kpm9qMlT+tsl/UjSL83sm5LekHRtPxsF0Dttg+/uv5d0VovyV3vb\nDsrW7n73iy++OFkvOo6PweCde0BABB8IiOADARF8ICCCDwRE8IGACD4QEB9aPmAnTpwoVC/q/vvv\nT9Y3bNiQrOP0xBEfCIjgAwERfCAggg8ERPCBgAg+EBDBBwJiHH/ADhw4kKy3+3zC/fv397Cb3psz\nZ06yvnjx4pI6QSOO+EBABB8IiOADARF8ICCCDwRE8IGACD4QEOP4AzZ//vxkfeHChcn6oMfxV6xY\nkazfd999yfrwMHOtDgJHfCAggg8ERPCBgAg+EBDBBwIi+EBAbYNvZqNm9pSZ/dXMXjKzb+frx8zs\nTTN7If+6qv/tAuiFTsbx/yNpnbvvMbNzJf3JzJ7Ia+vdfX3/2sPY2Fiy3u5+9+3btyfr7cbRt2zZ\nkqyPjo4W+vkYjLbBd/dDkg7ly8fMbK+kC/Oy9bE3AH1yStf4ZrZA0iJJz+arbjWzPWb2EzP7WI97\nA9AnHQc/P83fIek77n5M0kZJn3b3RZo8I+CUHzhNdPRefTMb0mTof+buOyXJ3Y80bPKgpN+2eny9\nXp9artVqbT9HDsCpy7JMWZZ1tG2nN+lslvQ3d5+aQdHMRvLrf0laIenlVg9uDD6A/mg+qI6Pj7fc\ntm3wzWyxpFWSXjKzFyW5pNslrTSzRZJOSNon6VtFmgZQnk5e1f+9pLNmKP2u9+0AKIO5e393YOb9\n3geAjzIzufuMQ+68ZRcIiOADARF8ICCCDwRE8IGACD4QEMEHAiL4QEAEHwiI4AMBEXwgoNKD3+n9\nwoNCf8VUub8q9yaV2x/Bb0J/xVS5vyr3Jp3hwQcweAQfCKiU+/H7ugMALbW6H7/vwQdQPZzqAwER\nfCCg0oJvZleZ2Stm9pqZfbes/XbKzPaZ2Z/N7EUze64C/Wwyswkz+0vDuvPN7HEze9XMHhvk7EUt\n+qvMRKozTPa6Nl9fiedw0JPRlnKNb2azJL0maYmkf0naLek6d3+l7zvvkJn9Q9IX3f2tQfciSWb2\nZUnHJG1z90vydT+S9G93/3H+y/N8d7+tQv2NSTpahYlUzWxE0kjjZK+SlklarQo8h4n+vq4SnsOy\njviXSfq7u7/h7h9K2q7Jv2SVmCp06ePuuyQ1/xJaJmlrvrxV0vJSm2rQoj+pIhOpuvshd9+TLx+T\ntFfSqCryHLbor7TJaMv6j36hpAMN37+p//8lq8IlPWFmu83s5kE308Kwu09IU7MYV3EO6spNpNow\n2esfJc2r2nM4iMloK3OEq4DF7v4FSVdLWpOfylZd1cZiKzeR6gyTvTY/ZwN9Dgc1GW1Zwf+npE81\nfD+ar6sMdz+Y/3lE0q81eXlSNRNmNk+aukY8POB+pnH3Iw2zpzwo6dJB9jPTZK+q0HPYajLaMp7D\nsoK/W9JnzGy+mZ0t6TpJD5e077bMbHb+m1dmNkfSUiUmAS2Rafr13sOSbsyXb5C0s/kBJZvWXx6k\nk5ITqZbkI5O9qlrP4YyT0TbU+/YclvbOvXxYYoMmf9lscvcflrLjDpjZRZo8yrsm5xP8+aD7M7OH\nJNUkfVzShKQxSb+R9CtJn5T0hqRr3f3tCvX3FU1eq05NpHryenoA/S2W9LSklzT573pystfnJP1S\nA34OE/2tVAnPIW/ZBQLixT0gIIIPBETwgYAIPhAQwQcCIvhAQAQfCIjgAwH9D8H30BZ8wNlsAAAA\nAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2773561ecf8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -269,14 +284,14 @@
     "print('Accuracy:', m1.get_accuracy(mnist.test.images, mnist.test.labels))\n",
     "\n",
     "\n",
-    "# # Get one and predict\n",
-    "# r = random.randint(0, mnist.test.num_examples - 1)\n",
-    "# print(\"Label: \", sess.run(tf.argmax(mnist.test.labels[r:r + 1], 1)))\n",
-    "# print(\"Prediction: \", tf.argmax(m1.predict(mnist.test.images[r:r + 1]),1))\n",
+    "# Get one and predict\n",
+    "r = random.randint(0, mnist.test.num_examples - 1)\n",
+    "print(\"Label: \", sess.run(tf.argmax(mnist.test.labels[r:r + 1], 1)))\n",
+    "print(\"Prediction: \", sess.run(tf.argmax(m1.predict(mnist.test.images[r:r + 1]),1)))\n",
     "\n",
-    "# # show image\n",
-    "# plt.imshow(mnist.test.images[r:r + 1].reshape(28, 28), cmap='Greys', interpolation='nearest')\n",
-    "# plt.show()"
+    "# show image\n",
+    "plt.imshow(mnist.test.images[r:r + 1].reshape(28, 28), cmap='Greys', interpolation='nearest')\n",
+    "plt.show()"
    ]
   }
  ],
