--- a/DeepLearningStudy/ex_lab-11-5-mnist_cnn_ensemble_layers.ipynb
+++ b/DeepLearningStudy/ex_lab-11-5-mnist_cnn_ensemble_layers.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define class for the model"
+    "# Define Model class for the model"
    ]
   },
   {
@@ -167,7 +167,8 @@
     "        return self.sess.run(self.accuracy, feed_dict={self.X: x_test, self.Y: y_test, self.training: training})\n",
     "\n",
     "    def train(self, x_data, y_data, training=True):\n",
-    "        return self.sess.run([self.cost, self.optimizer], feed_dict={self.X: x_data, self.Y: y_data, self.training: training})"
+    "        return self.sess.run([self.cost, self.optimizer], \n",
+    "                             feed_dict={self.X: x_data, self.Y: y_data, self.training: training})"
    ]
   },
   {
