--- a/DeepLearningStudy/ex_lab-11-4-mnist_cnn_layers.ipynb
+++ b/DeepLearningStudy/ex_lab-11-4-mnist_cnn_layers.ipynb
@@ -163,7 +163,8 @@
     "        return self.sess.run(self.accuracy, feed_dict={self.X: x_test, self.Y: y_test, self.training: training})\n",
     "\n",
     "    def train(self, x_data, y_data, training=True):\n",
-    "        return self.sess.run([self.cost, self.optimizer], feed_dict={self.X: x_data, self.Y: y_data, self.training: training})\n"
+    "        return self.sess.run([self.cost, self.optimizer], \n",
+    "                             feed_dict={self.X: x_data, self.Y: y_data, self.training: training})\n"
    ]
   },
   {
